--- a/style.css
+++ b/style.css
@@ -14,18 +14,24 @@
 
 body {
     background-image: url(assets/topography.png);
-    margin:0;
+    /*margin-top: 0px;
+    margin-left: 20px;
+    margin-right: 20px;*/
+    margin:0px;
     font-family: 'Courier New', Courier, monospace;
 
 }
 
 header {
     margin-top: 0;
+    background-color: #333;
 }
 
 ul {
     list-style-type: none;
     margin-top: 0;
+    margin-left: 250px;
+    margin-right: 250px;
     padding: 0;
     overflow: hidden;
     background-color: #333;
@@ -60,7 +66,9 @@ ul {
 }
 
 .text {
-    margin: 120px;
+    margin: 0px;
+    margin-left: 250px;
+    margin-right: 250px;
 }
 
 h1 {
@@ -76,7 +84,7 @@ h2 {
 }
 
 p {
-    font-size: 20px;
+    font-size: 100%;
     font-family: "RobotoMono";
     line-height: 35px;
 }
